# izip

./: .branch_info.txt  .dependancies.txt  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  init.cmake
.github/workflows/: cmake-single-platform.yml
source/: App.cpp  App.h  Appctor.cpp  IApp.h  main.cpp
source/FileRep/: File.cpp  File.h  IFile.h
source/comp_file/: ArchiveComputation.cpp  ArchiveComputation.h  ArchiveDecompression.cpp  File.cpp  File.h  FileCompression.cpp  FileComputation.cpp  FileComputation.h  FileIfc.h  Fileifc.h  IFile.h  archive_computation.cpp  recursive_processing.cpp
source/comp_help/: Help.cpp  Help.h  Ihelp.h
source/macros/: aliases.h
source/softarchive/: ArchiveComputation.cpp  ArchiveComputation.h  ArchiveDecompression.cpp  FileCompression.cpp
source/universal/: Spesifier.hpp  composite.hpp  exit_codes.hpp
test/: ArchiveComputation.cpp  CompHelpTest.cpp  FileMockTest.cpp  FileTest.cpp  file_test.c  main.cpp
test/comp_help/: general_message.cpp  general_message.h  param_descriptor.cpp  param_help_descriptors.cpp
test/comp_help/descriptors/: general_message.cpp  general_message.h  helpTestFixture.h  param_descriptor.cpp  param_descriptor.h  param_help_descriptors.cpp  param_help_descriptors.h
test/testset/: archive_test.tar  file_test.c  file_test.x.cpp
